<resources>
    <string name="app_name">revel</string>

    <string name="welcome">in a circle:</string>
    <string name="line1">ask a question anonymously</string>
    <string name="line2">answer a question publicly</string>
    <string name="line3">have fun</string>
    <string name="line4">repeat</string>
    <string name="playerCount">how many players?</string>
    <string name="playersJoinLeave">players can join and leave freely</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="enterQuestion">type something for someone to respond to</string>
    <string name="flavorTextDefault">once you get the message, hang up the phone</string>
    <string name="next_player">Next Player</string>
    <string name="submit">Submit</string>
    <string name="respondToAbove">respond to the above secretly</string>
    <string name="sameTurnToggle">Jake\'s Idea Mode</string>
    <string name="numberHint">##</string>
    <string name="defaultNumberPlayers">3</string>
    <string name="suggestedNumberPlayers">recommended: 3</string>
    <string name="minMaxNumberPlayers">more is usually better</string>
    <string name="doneReading">done reading</string>
    <string name="imReady">I\'m Ready</string>

    <!-- properly refactored strings -->
    <string name="hint_editText_editThought">
        now you type a question.\n
        this is usually done secretly.\n
        you are anonymous.\n
        someone else will answer.</string>
    <string name="hint_editText_editResponse">
        enter a response here.\n
        you are anonymous.\n
        someone will read it later.</string>

    <string name="button_postQuestion">end my turn</string>
    <string name="button_readPair">i\'m done reading it out</string>
    <string name="button_postAnswer">submit response</string>
    <string name="button_startGame">start game</string>
    <string name="button_doneResponding">go to next step</string>
    <string name="button_waiting">waiting</string>
    <string name="button_playerIsReady">start my turn</string>
    <string name="button_intro">understood</string>

    <string name="placeHolderText_thoughtAppears">question appears</string>
    <string name="placeHolderText_responseAppears">answer appears here</string>
    <string name="placeHolderText_flavorText">once you get the message, hang up the phone</string>

    <string name="warning_thoughtTooShort">must use four letters or more.</string>
    <string name="warning_tooFewPlayers">must use 1 or more players</string>

    <string name="text_display_tapToRevealThought">tap to reveal the question</string>


    <string name="textView_promptToRespond">answer this question out loud:</string>
    <string name="textView_promptToAsk">secretly ask something:</string>
    <string name="textView_promptToPass">pass me to the next player</string>

</resources>
