<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ReadPairFragment">

    <TextView
        android:id="@+id/textView_questionToBeRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/placeHolderText_thoughtAppears"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_answerToBeRead"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:scrollbars="vertical"
        android:text="@string/placeHolderText_responseAppears"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textView_questionToBeRead"
        app:layout_constraintBottom_toTopOf="@id/button_doneReadingPair"/>

    <Button
        android:id="@+id/button_doneReadingPair"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="80dp"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        android:text="@string/button_readPair"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent" />

</>