<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PostResponseFragment">

    <TextView
        android:id="@+id/textView_questionForPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/placeHolderText_thoughtAppears"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText_editResponse" />

    <EditText
        android:id="@+id/editText_editResponse"
        android:inputType="textAutoCorrect"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:hint="@string/hint_editText_editResponse"
        app:layout_constraintTop_toBottomOf="@id/textView_questionForPlayer"
        app:layout_constraintBottom_toTopOf="@id/button_nextPlayer" />

    <Button
        android:id="@+id/button_nextPlayer"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="80dp"
        android:textSize="20sp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_postAnswer"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>