<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/postQuestionLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PostThoughtFragment">

    <TextView
        android:id="@+id/textView_promptToAsk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/textView_promptToAsk"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_editThought"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="@string/hint_editText_editThought"
        android:inputType="textAutoCorrect|textMultiLine"
        android:layout_margin="40dp"
        android:padding="15dp"
        android:textCursorDrawable="@null"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/textView_promptToAsk"
        app:layout_constraintBottom_toTopOf="@id/button_postThought" />

    <Button
        android:id="@+id/button_postThought"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="80dp"
        android:textSize="20sp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_postQuestion"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>