<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.NextPlayerFragment">

    <TextView
        android:id="@+id/textView_promptToPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/textView_promptToPass"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <!--cool looking gradient shifting animation -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_gradientBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_fileName="gradient_animated_background.json"
        app:layout_constraintTop_toBottomOf="@id/textView_promptToPass"
        app:layout_constraintBottom_toBottomOf="@id/button_nextPlayerIsReady"/>

    <TextView
        android:id="@+id/textView_flavorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:padding="30dp"
        android:textStyle="bold"

        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1.6"
        android:text="@string/placeHolderText_flavorText"
        android:textColor="@color/colorAccent"

        app:layout_constraintBottom_toTopOf="@id/button_nextPlayerIsReady"
        app:layout_constraintTop_toBottomOf="@id/textView_promptToPass"/>

    <Button
        android:id="@+id/button_nextPlayerIsReady"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="80dp"
        android:textSize="25sp"
        android:background="@color/colorPrimaryDark"
        android:textAllCaps="false"
        android:text="@string/button_playerIsReady"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>